style.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}
body {
  background: #232830;
}
nav,
ul {
  display: flex;
  justify-content: space-around;
  align-items: center;
  padding: 1em;
}
nav a,
ul {
  text-decoration: none;
  color: #fff;
  font-family: Poppins;
  font-size: 1em;
  font-style: normal;
  line-height: normal;
  list-style-type: none;
}
nav li {
  padding: 0 15px;
}
.hero {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin: 3em 0;
}
.hero-content {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.hero-content img {
  max-width: 100%;
  width: 12.15281rem;
  height: 12.75525rem;
  flex-shrink: 0;
}
.hero h1 {
  color: #ff7575;
  font-family: Recursive;
  font-size: 2em;
  font-style: italic;
  font-weight: 400;
  line-height: normal;
}
.hero p {
  color: #fff;
  font-family: Poppins;
  font-size: 1em;
  font-style: normal;
  font-weight: 400;
  line-height: normal;
}
.menu {
  display: flex;
  background: #232830;
  align-items: center;
  justify-content: center;
  max-width: 100%;
  margin: 0 auto;
}
.menu li,
span {
  list-style-type: none;
  color: #909090;
  font-family: Recursive;
  font-size: 1em;
  font-style: italic;
  font-weight: 400;
  line-height: normal;
  padding: 0 0.7em;
}
.article {
  display: flex;
  flex-flow: row wrap;
  align-items: center;
  justify-content: center;
  margin: 2em auto;
  width: 70%;
  gap: 18px;
}
.article-card {
  flex: 0 0 30%;
  background-color: white;
  width: 33%;
  padding: 0.5;
  border-radius: 1.375rem;
  border: 1px solid #252930;
  background: #fff;
  padding: 0.8em;
  max-width: 100%;
  display: flex;
  flex-direction: column;
  gap: 0.8em;
}
.article-card img {
  max-width: 100%;
}
.article-card h3 {
  font-weight: bold;
}
.pagination {
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 3em 0 5em;
}
.pagination a {
  color: #909090;
  font-family: Recursive;
  font-size: 1em;
  font-style: italic;
  font-weight: 400;
  text-decoration: none;
}
.pagination li {
  padding: 10px 1em;
}
.pagination li:nth-child(2) {
  border-top: 2px solid #ff7575;
  color: blue;
}
.divider {
  width: 105rem;
  height: 0.1875rem;
  opacity: 0.2;
  background: #4d4d4d;
}
footer {
  height: 8rem;
  display: flex;
  justify-content: space-around;
  padding: 1.5em;
}
footer p {
  color: #fff;
  font-family: sans-serif;
  font-size: 1em;
  font-style: normal;
  font-weight: 600;
  line-height: normal;
}
footer span,
.dev {
  color: #fff;
  font-family: sans-serif;
  font-size: 0.8em;
  font-style: normal;
  font-weight: 600;
  background: rgb(43, 127, 196);
  border-radius: 3px;
  padding: 5px 10px;
  height: 30px;
}

